#139 fix PR issues filters and alignment

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -175,7 +175,8 @@ div.MuiDataGrid-filterFormDeleteIcon {
 
 .slider {
   position: relative;
-  width: 250px;
+  width: 100%;
+  max-width: 100%;
 }
 
 .slider__track,
@@ -289,7 +290,7 @@ div.MuiDataGrid-filterFormDeleteIcon {
   pointer-events: none;
   position: absolute;
   height: 0;
-  width: 250px;
+  width: calc(100% - 3rem - 16px);
   outline: none;
 }
 
@@ -420,6 +421,14 @@ svg.star-svg {
     z-index: 1;
     pointer-events: none; /* Allows clicks to pass through the transparent area */
   }
+
+  [lang="ar"] .menu-scrollable-indicator{
+    left:0;
+    right:auto;
+    height: calc(100% - 6px);
+  }
+
+  
 }
 
 .scrollbar-invisible::-webkit-scrollbar{
